--- a/Calendar.html
+++ b/Calendar.html
@@ -4,6 +4,9 @@
     <title>The Fiddle & Bow Music Hall Calendar</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Jonathan Eiland, Owner and Artist at Invisible Katana Artwork, LLC">
+    <meta name="keywords" content="live music, music venue, concerts, performances, Honea Path, SC, Bluegrass, Country, Singer Songwriter, Folk, Gospel">
+    <meta name="description" content="The Fiddle and Bow Music Hall is a Live Music Venue featuring live music events in Honea Path, SC. Enjoy a family friendly atmosphere with only 115 seats and a diverse lineup of talented artists.">
 
     <!-- Link for CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -45,7 +48,7 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-                <li><a href="Home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="About.html">About</a></li>
                 <li class="active"><a href="Calendar.html">Calendar</a></li>
                 <li><a href="Store.html">Store</a></li>
@@ -62,15 +65,9 @@
         <div class="container text-left">
             <div class="row">
                 <div class="col-md-4">
-                    <div class="">
+                    <div class="upcoming">
                         <h1>Upcoming Events</h1>
-                        <p>
-                            In addition to our full calendar, we have a FREE bluegrass music jam circle every Tuesday evening from 6PM until. The rules are simple – bring your own instrument and join in or just your ears and listen. We will post on our social media page if this event is cancelled. You can learn more about our social media
-                            <a class="link-opacity-100-hover" href="Contact.html">here.</a>
-                            $5 Dollar Fridays is another event. On $5 Dollar Fridays, we focus on local talent and a $5 bill will get you in the door. These will be posted as they are scheduled and will be listed on the full calendar. If you have questions, you can contact us
-                            <a class="link-opacity-100-hover" href="Contact.html">here.</a>
-                        </p>
-
+                        <p>In addition to our scheduled events that are listed below, we have a FREE bluegrass music jam circle every Tuesday evening from 6PM until at The Fiddle and Bow Music Hall. The rules are simple – bring your own instrument and join in or just your ears and listen. We will post on our social media page if this event is canceled. You can find all our social media <a class="link-opacity-100-hover" href="Contact.html">here</a>. $5 Dollar Fridays are events we host as they come up that focus on local talent. A $5 bill will get you in the Red Door. If you have questions, visit our contact page <a class="link-opacity-100-hover" href="Contact.html">here</a>.</p>
                     </div>
                 </div>
                 <div class="col-md-4 tnb">
@@ -84,36 +81,9 @@
 
         <div class="container text-left">
             <H1>Full Calendar</H1>
-            <p>The Fiddle and Bow Music Hall’s full calendar is below. We will update this as shows are scheduled. We do not list the FREE bluegrass jam circle but unless otherwise announced on social media, we host this every Tuesday with the red door opening at 6PM. Below each tour date poster, you will find date, time, and ticket prices. You can purchase tickets at the Red Door, by phone or at the link below the poster. If you have questions, you can contact us <a class="link-opacity-100-hover" href="Contact.html">here.</a><p>
+            <p>The Fiddle and Bow Music Hall’s full calendar is below. We update this regularly as shows are scheduled. You will find information about the artist, any guests, door and show times, ticket prices, and a link for ticket purchase below each poster. You can purchase tickets at the Red Door, by calling the box office at <a href="tel:+18649402254" class="link-primary">(864) 940-2254</a> between 7AM and 9PM, or at the link below the poster. If you have questions, visit our contact page <a class="link-opacity-100-hover" href="Contact.html">here</a>.</p>
             <div class="row content">
-                <div class="col-sm-4 show-1">
-                    <img src="images/Retro 78_MAR24_Web.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
-                    <h2>Retro 78</h2>
-                    <h3>March 9th, 2024</h3>
-                    <h3>Red Door 6PM | Show 7PM</h3>
-                    <h3>Tickets $15</h3>
-                    <a href="" class="btn custom-btn" role="button">Tickets</a>
-                </div>
-                <div class="col-sm-4 show-2">
-                    <img src="images/Cater.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
-                    <h2>Big Daddy Cater Presents Silly Saturdays</h2>
-                    <h3>March 16th, 2024</h3>
-                    <h3>Red Door 7PM | Show 8PM</h3>
-                    <h3>Tickets $10</h3>
-                    <a href="" class="btn custom-btn" role="button">Tickets</a>
-                </div>
-                <div class="col-sm-4 show-3">
-                    <img src="images/JBB_MAR24_Web.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
-                    <h2>The Johnson Bentley Band</h2>
-                    <h3>March 22nd, 2024</h3>
-                    <h3>Red Door 6PM | Show 7PM</h3>
-                    <h3>Tickets $10</h3>
-                    <a href="https://www.eventbrite.com/e/the-johnson-bentley-band-tickets-789201421697?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
-                </div>
-            </div>
-
-            <div class="row content">
-                    <div class="col-sm-4 show-4">
+                    <div class="col-sm-4 show-1">
                     <img src="images/David Childers_Branded_April24.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
                     <h2>David Childers w/ Special Guest Cody Gentry</h2>
                     <h3>April 20th, 2024</h3>
@@ -121,7 +91,7 @@
                     <h3>Tickets $20</h3>
                     <a href="https://www.eventbrite.com/e/david-childers-and-the-serpents-w-cody-gentry-tickets-786313824817?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
                </div>
-                    <div class="col-sm-4 show-5">
+                    <div class="col-sm-4 show-2">
                         <img src="images/A Step Ahead_APR24_Web.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
                         <h2>One Step Ahead</h2>
                         <h3>April 26th, 2024</h3>
@@ -129,7 +99,7 @@
                         <h3>Tickets $15</h3>
                         <a href="https://www.eventbrite.com/e/one-step-ahead-tickets-797097850127?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
                </div>
-               <div class="col-sm-4 show-6">
+               <div class="col-sm-4 show-3">
                    <img src="images/Nathan Stanley_Branded_April 24.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
                    <h2>Nathan Stanley and His Country Music Band</h2>
                    <h3>April 27th, 2024</h3>
@@ -140,7 +110,7 @@
             </div>
 
             <div class="row content">
-                <div class="col-sm-4 show-7">
+                <div class="col-sm-4 show-4">
                     <img src="images/Madison Medlin.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
                     <h2>Madison Medlin</h2>
                     <h3>May 10th, 2024</h3>
@@ -148,13 +118,37 @@
                     <h3>Tickets $5</h3>
                     <a href="https://www.eventbrite.com/e/madison-medlin-tickets-797336353497?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
                 </div>
-            <div class="col-sm-4 show-8">
+                <div class="col-sm-4 show-5">
+                    <img src="images/Tugalo Holler.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
+                    <h2>Brand New Box of Matches w/ Special Guest Will Millford</h2>
+                    <h3>May 25th, 2024</h3>
+                    <h3>Red Door 6PM | Show 7PM</h3>
+                    <h3>Tickets $15</h3>
+                    <a href="https://www.eventbrite.com/e/tugalo-holler-tickets-865460444487?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
+                </div>
+                <div class="col-sm-4 show-6">
+                    <img src="images/Tim Menzies.JPG" class="img-fluid" style="width: 100%" alt="Responsive image">
+                    <h2>An Evening with Tim Menzies</h2>
+                    <h3>June 8th, 2024</h3>
+                    <h3>Red Door 6PM | Show 7PM</h3>
+                    <h3>Tickets $20</h3>
+                    <a href="https://www.eventbrite.com/e/an-evening-with-tim-menzies-tickets-862471043107?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
+                </div>
+                <div class="col-sm-4 show-7">
                 <img src="images/Dr Mac Arnold_Branded_June 24.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
                 <h2>Legendary Dr Mac Arnold and John Hartness Duo</h2>
                 <h3>June 21st, 2024</h3>
                 <h3>Red Door 6PM | Show 7PM</h3>
                 <h3>Tickets $15</h3>
-                <a href="https://www.eventbrite.com/e/carly-rikard-and-the-show-goats-tickets-796904511847?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
+                <a href="https://www.eventbrite.com/e/legendary-dr-mac-arnold-and-john-hartness-duo-tickets-822143412077?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
+                </div>
+                <div class="col-sm-4 show-8">
+                    <img src="images/Bellamy.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
+                    <h2>Jesse and Noah Bellamy</h2>
+                    <h3>June 22nd, 2024</h3>
+                    <h3>Red Door 6PM | Show 7PM</h3>
+                    <h3>Tickets $20</h3>
+                    <a href="https://www.eventbrite.com/e/jesse-and-noah-bellamy-tickets-860048366817?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
                 </div>
                 <div class="col-sm-4 show-9">
                     <img src="images/Rikard_JUN24_Web.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
@@ -165,6 +159,7 @@
                     <a href="https://www.eventbrite.com/e/carly-rikard-and-the-show-goats-tickets-796904511847?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
                 </div>
             </div>
+            
                 <div class="row content">
                     <div class="col-sm-4 show-10">
                         <img src="images/Austin Irby _For Real_Branded_July 24.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
@@ -175,6 +170,14 @@
                         <a href="https://www.eventbrite.com/e/austin-irby-for-real-event-tickets-850409907927?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
                     </div>
                     <div class="col-sm-4 show-11">
+                        <img src="images/Edgar Loudermilk Band.JPG" class="img-fluid" style="width: 100%" alt="Responsive image">
+                        <h2>Brand New Box of Matches w/ Special Guest Will Millford</h2>
+                        <h3>July 20th, 2024</h3>
+                        <h3>Red Door 6PM | Show 7PM</h3>
+                        <h3>Tickets $20</h3>
+                        <a href="https://www.eventbrite.com/e/award-winning-bluegrass-with-the-edgar-loudermilk-band-tickets-865472721207?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
+                    </div>
+                    <div class="col-sm-4 show-12">
                         <img src="images/Riverstone_5 Dollar Friday_09Aug24.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
                         <h2>Riverstone</h2>
                         <h3>August 9th, 2024</h3>
@@ -182,7 +185,7 @@
                         <h3>Tickets $5</h3>
                         <a href="https://www.eventbrite.com/e/riverstone-tickets-850495744667?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
                     </div>
-                    <div class="col-sm-4 show-12">
+                    <div class="col-sm-4 show-13">
                         <img src="images/BrandNewBoxOfMatches.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
                         <h2>Brand New Box of Matches w/ Special Guest Will Millford</h2>
                         <h3>August 24th, 2024</h3>
@@ -190,9 +193,17 @@
                         <h3>Tickets $10</h3>
                         <a href="https://www.eventbrite.com/e/brand-new-box-of-matches-w-special-opener-will-milford-tickets-850398383457?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
                     </div>
+                    <div class="col-sm-4 show-14">
+                        <img src="images/Willie Wells.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
+                        <h2>Willie Wells & The Blue Ridge Mountain Grass</h2>
+                        <h3>September 14th, 2024</h3>
+                        <h3>Red Door 6PM | Show 7PM</h3>
+                        <h3>Tickets $15</h3>
+                        <a href="https://www.eventbrite.com/e/willie-wells-and-the-blue-ridge-mountain-grass-tickets-874105532177?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
+                    </div>
 </div>
                     <div class="row content">
-                        <div class="col-sm-4 show-13">
+                        <div class="col-sm-4 show-15">
                             <img src="images/Austin Irby_Elvis_Branded_October 24.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
                             <h2>Austin Irby as ELVIS</h2>
                             <h3>October 19th, 2024</h3>
