--- a/About.html
+++ b/About.html
@@ -4,6 +4,10 @@
   <title>The Fiddle & Bow About Page</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="Jonathan Eiland, Owner and Artist at Invisible Katana Artwork, LLC">
+  <meta name="keywords" content="live music, music venue, concerts, performances, Honea Path, SC, Bluegrass, Country, Singer Songwriter, Folk, Gospel">
+  <meta name="description" content="The Fiddle and Bow Music Hall is a Live Music Venue featuring live music events in Honea Path, SC. Enjoy a family friendly atmosphere with only 115 seats and a diverse lineup of talented artists.">
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="CSS/About.css">
   <style>
@@ -42,7 +46,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li><a href="Home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li class="active"><a href="About.html">About</a></li>
         <li><a href="Calendar.html">Calendar</a></li>
         <li><a href="Store.html">Store</a></li>
@@ -57,9 +61,9 @@
   <div class="row content"> <!-- Opens row for Piece -->
     <div class="col-sm-8 text-left"> <!-- Opens section for about piece -->
       <h1>About The Fiddle & Bow Music Hall</h1>
-      <p><p>If you look closely at our logo across the front of our downtown venue, you’ll notice the silhouette of a fiddler. This is the silhouette of a local named Mack MaGaha. “Mac” was born August 1st of 1929 in Honea Path, SC and passed on in August of 2003. He was commonly known as the “dancing fiddle man” and was called a “ball of fire out there” by Porter Wagoner. Mack MaGaha was part of Porter Wagoner’s band for over 20 years. This was a big accomplishment for a small-town fiddle player. We would love to be a starting point for another small-town talent to reach such heights.<br><br>
-
-        A local fiddle player sharing his gift and passion with the world is what inspired our name and mission at The Fiddle and Bow Music Hall. Our passion doesn’t stop with music though. Folk art and particularly that from the Southeastern United States is another passion we have and share at The Fiddle and Bow Music Hall. The old brick walls in our small downtown building are decorated with one of the best private collections of folk art in the state and art by the venue owner, Justin Atkin. Justin Atkin is a well-known folk artist himself. You can find stories about him and even interview with the Anderson Observer. The Fiddle and Bow Music Hall’s art collection includes pieces by Reverend Jimmy Morrow, Reverend Howard Finster, Mary Proctor, and more. Feel free to appreciate this lovely art genre while you wait on a bluegrass, country, or comedy show to start.</p></p>
+      <p><p>If you look closely at our logo across the front of our downtown venue, you’ll notice the silhouette of a fiddler. This is the silhouette of a local named Mack MaGaha. “Mac” was born on August 1st, 1929 in Honea Path, SC, and passed away in August of 2003. He was commonly known as the “dancing fiddle man” and was called a “ball of fire out there” by Porter Wagoner. Mack MaGaha was part of Porter Wagoner’s band for over 20 years. This was a big accomplishment for a small-town fiddle player. We would love to be a starting point for another small-town talent to reach such heights. Part of our mission is to do just this, promote local talent. <br><br>
+        A local fiddle player sharing his gift and passion with the world is what inspired our name and mission at The Fiddle and Bow Music Hall. Our passion doesn’t stop with music though. Folk art particularly that from the Southeastern United States is another passion we have and share at The Fiddle and Bow Music Hall. The old brick walls in our small downtown building are decorated with one of the best private collections of folk art in the state and art by the venue owner, Justin Thomas Atkin. Justin is a well-known folk artist himself. You can find out more about his art at the Anderson Observer. The Fiddle and Bow Music Hall’s art collection includes pieces by Reverend Jimmy Morrow, Reverend Howard Finster, Mary Proctor, and more. Feel free to appreciate this lovely art genre while you wait for a show to start.
+      </p></p>
     </div>
     <div class="col-sm-4 text-left about">
       <img src="images/About_FiddleAndCurtain.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
@@ -71,8 +75,8 @@
   <div class="row content">
     <div class="col-sm-8 text-left">
       <h1>Meet The Owners, Justin & Sarah Atkin</h1>
-      <p>Justin and Sarah Atkin have been happily married for 18 years and have 2 sons and 1 daughter. The two met in Honea Path. Justin is a native of Honea Path, SC and graduated from Belton Honea Path High School in 2001. Sarah is originally from Ohio but moved to Honea Path when she was a teenager. Both Justin and Sarah are passionaite about their family, their community, music, and art. Their shared love of each other, music, and art make them great hosts and curators of The Fiddle adn Bow Music Hall.<br><br>
-        Everyone is welcome at The Fiddle and Bow where we share our love of music, southern folk art, and promote local talent. We would love to hear from you and to have you join us one evening for a show. You can learn more about upcoming events on our <a href="Calendar.html" class="link-primary">calendar</a> or contact us with questions <a href="Contact.html" class="link-primary">here</a>. We look forward to hearing from you. If you have not, please follow our social media pages too. All likes, shares, and follows are appreciated. You can find all of these links and more <a href="Contact.html" class="link-primary">here</a>.</p>
+      <p>Justin and Sarah Atkin have been happily married for 18 years and have 2 sons and 1 daughter. The two met in Honea Path. Justin is a native of Honea Path, SC, and graduated from Belton Honea Path High School in 2001. Sarah is originally from Ohio but moved to Honea Path when she was a teenager. Both Justin and Sarah are passionate about their family, their community, music, and art. Their shared love of each other and the arts makes them great hosts and curators of The Fiddle and Bow Music Hall. Come out to a show sometime and meet them in person.<br><br>
+        Everyone is welcome at The Fiddle and Bow where we share our love of music, southern folk art, and promote local talent. We would love to hear from you and to have you join us one evening for a show. You can learn more about upcoming events on our <a href="Calendar.html" class="link-primary">calendar</a> or contact us with questions <a href="Contact.html" class="link-primary">here</a>. We look forward to hearing from you. If you have not, please follow us on social media. All likes, shares, and follows are appreciated. You can find all of these links and more <a href="Contact.html" class="link-primary">here</a>.</p>
     </div>
     <div class="col-sm-4 text-left owners">
       <img src="images/Country and Sarah.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
@@ -82,17 +86,9 @@
 
 <div class="container text-left"> <!-- Opens Upcoming Shows Container -->
   <H1>Upcoming Shows at The Fiddle & Bow Music Hall</H1>
-  <p>Sharing our passion for music means keeping musicians on The Fiddle and Bow Music Hall stage. The events below are upcoming at The Fiddle and Bow Music Hall, but there's more. See our full calendar <a href="Calendar.html" class="link-primary">here</a> for more upcoming events.</p>
+  <p>Sharing our passion for music means keeping musicians on The Fiddle and Bow Music Hall’s stage. We are constantly booking new events and have artists of several genres and full all over the country signing up to perform under the watchful eye of Hank Williams. You can see our full calendar <a href="Calendar.html" class="link-primary">here</a>. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
   <div class="row"> <!-- Opens Upcoming Shows Row -->
-    <div class="col-sm-4">
-      <img src="images/JBB_MAR24_Web.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
-      <h2>The Johnson Bentley Band</h2>
-      <h3>March 22nd, 2024</h3>
-      <h3>Red Door 6PM | Show 7PM</h3>
-      <h3>Tickets $10</h3>
-      <a href="" class="btn custom-btn" role="button">Tickets</a>
-    </div><!-- Closes Upcoming Shows first poster -->
-    <div class="col-sm-4 show-2">
+    <div class="col-sm-4 show-1">
       <img src="images/David Childers_Branded_April24.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
       <h2>David Childers w/ Special Guest Cody Gentry</h2>
       <h3>April 20th, 2024</h3>
@@ -100,8 +96,16 @@
       <h3>Tickets $20</h3>
       <a href="https://www.eventbrite.com/e/david-childers-and-the-serpents-w-cody-gentry-tickets-786313824817?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
     </div><!-- Closes Upcoming Shows Second poster -->
+    <div class="col-sm-4 show-2">
+      <img src="images/A Step Ahead_APR24_Web.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
+      <h2>One Step Ahead</h2>
+      <h3>April 26th, 2024</h3>
+      <h3>Red Door 6PM | Show 7PM</h3>
+      <h3>Tickets $15</h3>
+      <a href="https://www.eventbrite.com/e/one-step-ahead-tickets-797097850127?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
+    </div>
     <div class="col-sm-4 never-know">
-      <p>You never know who might be on stage at The Fiddle and Bow Music Hall. It could be anyone from a local band to a "Nashville A List" artist. We might even be hosting local comedians to bring some cheer and laughs. We host a FREE bluegrass jam circle every Tuesday and occasionally $5 Dollar Friday events as well. See our full calendar <a href="Calendar.html" class="link-primary">here</a> for more upcoming events. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
+      <p>You never know who might be on stage at The Fiddle and Bow Music Hall. It could be anyone from your friend’s local band to a Nashville A-List artist. We might be hosting local comedians to bring some laughs or other music or art-related events. We have a FREE bluegrass jam circle every Tuesday and occasionally $5 Dollar Friday events too. The events we host are one way we fulfill our mission of sharing our love of music, southern folk art, and promoting local talent. See our full calendar <a href="Calendar.html" class="link-primary">here</a> for more information. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
     </div>
   </div>
 </div><br>
