--- a/Calendar.html
+++ b/Calendar.html
@@ -120,7 +120,7 @@
                 </div>
                 <div class="col-sm-4 show-5">
                     <img src="images/Tugalo Holler.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
-                    <h2>Brand New Box of Matches w/ Special Guest Will Millford</h2>
+                    <h2>Tugalo Holler</h2>
                     <h3>May 25th, 2024</h3>
                     <h3>Red Door 6PM | Show 7PM</h3>
                     <h3>Tickets $15</h3>
@@ -171,7 +171,7 @@
                     </div>
                     <div class="col-sm-4 show-11">
                         <img src="images/Edgar Loudermilk Band.JPG" class="img-fluid" style="width: 100%" alt="Responsive image">
-                        <h2>Brand New Box of Matches w/ Special Guest Will Millford</h2>
+                        <h2>The Edgar Loudermilk Band</h2>
                         <h3>July 20th, 2024</h3>
                         <h3>Red Door 6PM | Show 7PM</h3>
                         <h3>Tickets $20</h3>
