--- a/Contact.html
+++ b/Contact.html
@@ -91,7 +91,7 @@
     </div>
     <div class="col-sm-8 text-left"> <!-- Opens section for about piece -->
       <h1>Questions?</h1>
-      <p>If you want to get to know us better, ask general questions about The Fiddle and Bow Music Hall, are confused about something, or just want to say hello, social media is a great option. You can find our social media links in one place <a href="Contact.html" class="link-primary">here</a>. You can always call the box office or email us too. You can also check our FAQ page <a href="FAQ.html" class="link-primary">here</a> for your questions. You may find an answer there. We don’t mind answering in person though. We think it’s easier to ask someone too.</p>
+      <p>If you want to get to know us better, ask general questions about The Fiddle and Bow Music Hall, are confused about something, or just want to say hello, social media is a great option. You can find our social media links in one place <a href="https://linktr.ee/thefiddleandbowmusichall" class="link-primary">here</a>. You can always call the box office or email us too. You can also check our FAQ page <a href="FAQ.html" class="link-primary">here</a> for your questions. You may find an answer there. We don’t mind answering in person though. We think it’s easier to ask someone too.</p>
       <br>
       <p>We look forward to hearing from you and filling our downtown venue with artists of all kinds and all levels. We want to share our love and collection of art with you and provide a downtown feels like home experience for our local community and others. It’s our mission here at The Fiddle and Bow Music Hall where we share our love for music, southern folk art, and promote local talent.</p>
       <h1>General Booking</h1>
