--- a/FAQ.html
+++ b/FAQ.html
@@ -64,7 +64,7 @@
   <div class="row content"> <!-- Opens row for Piece -->
     <div class="col-sm-8 text-left"> <!-- Opens section for about piece -->
       <h1>Frequently Asked Questions</h1>
-      <p>At The Fiddle and Bow Music Hall, we prioritize a family-friendly atmosphere where we strive to share our love for music, southern folk art, and to promote local talent. Below is a list of frequently asked questions. If you're on this page with a question, you may find your answer below. For instance, parking, food, alcohol, photography, etc. are all answered on this page. If you can't find what you need, contact us <a href="Contact.html" class="link-primary">here</a>. </p>
+      <p>At The Fiddle and Bow Music Hall, we prioritize a family-friendly atmosphere where we strive to share our love for music, southern folk art, and to promote local talent. The list below includes some frequently asked questions. If you're on this page with a question, you may find your answer below. For instance, parking, food, alcohol, photography, etc. are all answered on this page. If you can't find what you need, contact us <a href="Contact.html" class="link-primary">here</a>. </p>
 
       <h1>Do you serve or allow alcohol?</h1>
       <p>No, but we do serve Coke which pairs well with Moon Pies that we also sell. Sorry, we don't serve alcohol and by "Coke" we mean we have canned drinks. Everything in the South is "Coke" regardless of brand. We ask that you not bring alcohol to The Fiddle and Bow Music Hall. We strive to always have a family-friendly environment safe for all ages. Justin says, "The music is so good that you don't have to get drunk to enjoy it!"</p>
