--- a/FAQ.html
+++ b/FAQ.html
@@ -124,6 +124,8 @@
               <br><br>
             </div>
           </div>
+        </div>
+          </div>
   </div> <!-- Closes row for About Piece -->
 </div> <!-- Closes container for About Piece-->
 </div>
@@ -176,7 +178,6 @@
           <a href="https://www.instagram.com/thefiddleandbowmusichall/">
             <img src="images/Instagram Logo Square.png" alt="Instagram" class="social-icon" style="width: 30px; height: 30px;">
           </a>
-          <br><br>
         </div>
       </div>
       <!--Social Media Grid column-->
