--- a/FAQ.html
+++ b/FAQ.html
@@ -70,7 +70,7 @@
       <p>No, but we do serve Coke which pairs well with Moon Pies that we also sell. Sorry, we don't serve alcohol and by "Coke" we mean we have canned drinks. Everything in the South is "Coke" regardless of brand. We ask that you not bring alcohol to The Fiddle and Bow Music Hall. We strive to always have a family-friendly environment safe for all ages. Justin says, "The music is so good that you don't have to get drunk to enjoy it!"</p>
 
       <h1>Where can I park?</h1>
-      <p>We are downtown in smalltown USA so, there is very little activity going on at the same time as our shows. There is parking along the street, behind the building, and across the street. Just don't park anywhere marked "No Parking." For instance, the Police Department across from the venue. You'd surely get a ticket for that. The sheriff might come to a show or two but, we're not in that good with him.</p>
+      <p>We are downtown in small-town USA so, there is very little activity going on at the same time as our shows. There is parking along the street, behind the building, and across the street. Just don't park anywhere marked "No Parking." For instance, the Police Department across from the venue. You'd surely get a ticket for that. The sheriff might come to a show or two but, we're not in that good with him.</p>
 
       <h1>What if someone in my party is in a wheelchair?</h1>
       <p>No problem. We will accommodate you however possible. Our venue is ADA-compliant.</p>
@@ -82,7 +82,7 @@
       <p>Sure, pictures are no problem. The only time this would matter would be if the performing artist didn't want photography. We haven’t run into that yet, but if we do, we'll address it at that time. We would also communicate this at the show, on our social media, and on event posters. If you do take pictures, please be sure to tag us on social media - @thefiddleandbowmusichall. Also, please be courteous of your neighbor and don't block their view of the show.</p>
 
       <h1>How does my band get on stage?</h1>
-      <p>If you are an artist who is interested in performing at The Fiddle and Bow Music Hall or the manager of an artist, the best thing to do is contact us directly. We'd much rather talk with you in person to be sure all your questions are answered completely. You can contact us <a href="Contact.html" class="link-primary">here</a> .</p>
+      <p>If you are an artist who is interested in performing at The Fiddle and Bow Music Hall or the manager of an artist, the best thing to do is contact us directly. We'd much rather talk with you in person to be sure all your questions are answered completely. You can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
 
       <h1>How do I purchase some of your folk art?</h1>
       <p>If you want to buy original art by Justin Thomas Atkin, you can contact us <a href="Contact.html" class="link-primary">here</a> or watch our page to see when he'll be at local art events. We try to advertise local art shows he is planning to attend on our social media. You can also contact us and set up a time to browse the art we have for sale at The Fiddle and Bow Music Hall.</p>
