--- a/Calendar.html
+++ b/Calendar.html
@@ -67,7 +67,7 @@
                 <div class="col-md-4">
                     <div class="upcoming">
                         <h1>Upcoming Events</h1>
-                        <p>In addition to our scheduled events that are listed below, we have a FREE bluegrass music jam circle every Tuesday evening from 6PM until at The Fiddle and Bow Music Hall. The rules are simple – bring your own instrument and join in or just your ears and listen. We will post on our social media page if this event is canceled. You can find all our social media <a class="link-opacity-100-hover" href="Contact.html">here</a>. $5 Dollar Fridays are events we host as they come up that focus on local talent. A $5 bill will get you in the Red Door. If you have questions, visit our contact page <a class="link-opacity-100-hover" href="Contact.html">here</a>.</p>
+                        <p>In addition to our scheduled events that are listed below, we have a FREE bluegrass music jam circle every Tuesday evening from 6PM until at The Fiddle and Bow Music Hall. The rules are simple – bring your own instrument and join in or just your ears and listen. We will post on our social media page if this event is canceled. You can find all our social media <a class="link-opacity-100-hover" href="https://linktr.ee/thefiddleandbowmusichall">here</a>. $5 Dollar Fridays are events we host as they come up that focus on local talent. A $5 bill will get you in the Red Door. If you have questions, visit our contact page <a class="link-opacity-100-hover" href="Contact.html">here</a>.</p>
                     </div>
                 </div>
                 <div class="col-md-4 tnb">
