--- a/Store.html
+++ b/Store.html
@@ -68,17 +68,17 @@
       <div class="row">
         <div class="col-sm-4 bag">
           <img src="images/Store_Bag.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
-          <h2>F&B Tote Bag</h2>
+          <h2>The Fiddle and Bow Music Hall Tote Bag</h2>
           <a href="https://mvpscreenprinting.printavo.com/merch/fb_hp" class="btn custom-btn" role="button">Buy</a>
         </div>
         <div class="col-sm-4 hoodie">
           <img src="images/Store_Hoodie.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
-          <h2>F&B Hoodie</h2>
+          <h2>The Fiddle and Bow Music Hall Hoodie</h2>
           <a href="https://mvpscreenprinting.printavo.com/merch/fb_hp" class="btn custom-btn" role="button">Buy</a>
         </div>
         <div class="col-sm-4 shirt">
           <img src="images/Store_Shirt.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
-          <h2>F&B Shirt</h2>
+          <h2>The Fiddle and Bow Music Hall Shirt</h2>
           <a href="https://mvpscreenprinting.printavo.com/merch/fb_hp" class="btn custom-btn" role="button">Buy</a>
         </div>
       </div>
