--- a/About.html
+++ b/About.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>The Fiddle & Bow About Page</title>
+  <title>About The Fiddle & Bow Music Hall</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="Jonathan Eiland, Owner and Artist at Invisible Katana Artwork, LLC">
