--- a/About.html
+++ b/About.html
@@ -89,12 +89,12 @@
   <p>Sharing our passion for music means keeping musicians on The Fiddle and Bow Music Hall’s stage. We are constantly booking new events and have artists of several genres from all over the country signing up to perform under the watchful eye of Hank Williams. You can see our full calendar <a href="Calendar.html" class="link-primary">here</a>. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
   <div class="row"> <!-- Opens Upcoming Shows Row -->
     <div class="col-sm-4 show-1">
-      <img src="images/Margaret Haynie Poster.jpeg" class="img-fluid" style="width: 100%" alt="Responsive image">
-      <h2>Margaret Haynie</h2>
-      <h3>, 2024</h3>
+      <img src="images/Madison Medlin.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
+      <h2>$5 Dollar Friday - Madison Medlin</h2>
+      <h3>Mary 10th, 2024</h3>
       <h3>Red Door 6PM | Show 7PM</h3>
-      <h3>Tickets $20</h3>
-      <a href="https://www.eventbrite.com/e/david-childers-and-the-serpents-w-cody-gentry-tickets-786313824817?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
+      <h3>Tickets $5</h3>
+      <a href="https://www.eventbrite.com/e/madison-medlin-tickets-797336353497?aff=erelexpmlt" class="btn custom-btn" role="button">Tickets</a>
     </div><!-- Closes Upcoming Shows Second poster -->
     <div class="col-sm-4 show-2">
       <img src="images/Margaret Haynie Poster.jpeg" class="img-fluid" style="width: 100%" alt="Responsive image">
