--- a/Store.html
+++ b/Store.html
@@ -93,20 +93,20 @@
       <p>Sharing our passion for music means keeping musicians on The Fiddle and Bow Music Hall’s stage. We are constantly booking new events and have artists of several genres from all over the country signing up to perform under the watchful eye of Hank Williams. You can see our full calendar <a href="Calendar.html" class="link-primary">here</a>. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
       <div class="row">
                 <div class="col-sm-4 show-1">
-            <img src="images/David Childers_Branded_April24.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
-            <h2>David Childers w/ Special Guest Cody Gentry</h2>
-            <h3>April 20th, 2024</h3>
+            <img src="images/Madison Medlin.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
+            <h2>$5 Dollar Friday - Madison Medlin</h2>
+            <h3>May 10th, 2024</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $20</h3>
-            <a href="https://www.eventbrite.com/e/david-childers-and-the-serpents-w-cody-gentry-tickets-786313824817?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
+            <h3>Tickets $5</h3>
+            <a href="https://www.eventbrite.com/e/madison-medlin-tickets-797336353497?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
           </div>
           <div class="col-sm-4 show-2">
-            <img src="images/A Step Ahead_APR24_Web.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
-            <h2>One Step Ahead</h2>
-            <h3>April 26th, 2024</h3>
+            <img src="images/Margaret Haynie Poster.jpeg" class="img-fluid" style="width: 100%" alt="Responsive image">
+            <h2>Margaret Haynie</h2>
+            <h3>May 24th, 2024</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $15</h3>
-            <a href="https://www.eventbrite.com/e/one-step-ahead-tickets-797097850127?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
+            <h3>Tickets $10</h3>
+            <a href="https://www.eventbrite.com/e/an-intimate-evening-with-margaret-haynie-tickets-892172430757?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
           </div>
           <div class="col-sm-4 never-know">
             <div class="">
