--- a/Calendar.html
+++ b/Calendar.html
@@ -145,7 +145,7 @@
                 
                 </div>
                 <div class="col-sm-4 show-8">
-                   <img src="images/David Wills.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
+                   <img src="images/Dave Wills.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
                     <h2>David Wills w/ Special Guest The Joe Olds Band</h2>
                     <h3>July 5th, 2024</h3>
                     <h3>Red Door 6PM | Show 7PM</h3>
