--- a/Calendar.html
+++ b/Calendar.html
@@ -93,7 +93,7 @@
                </div>
                     <div class="col-sm-4 show-2">
                     <img src="images/Margaret Haynie Poster.jpeg" class="img-fluid" style="width: 100%" alt="Responsive image">
-                    <h2>One Step Ahead</h2>
+                    <h2>Margaret Haynie</h2>
                     <h3>May 24th, 2024</h3>
                     <h3>Red Door 6PM | Show 7PM</h3>
                     <h3>Tickets $10</h3>
