--- a/Contact.html
+++ b/Contact.html
@@ -107,12 +107,12 @@
 <div class="container text-left"> <!-- Opens Upcoming Shows Container -->
   <H1>Upcoming Shows at The Fiddle & Bow Music Hall</H1>
   <div class="row"> <!-- Opens Upcoming Shows Row -->
-    <div class="col-sm-4 show-1">
-      <img src="images/Madison Medlin.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
-      <h2>$5 Dollar Friday - Madison Medlin</h2>
-      <h3>May 10th, 2024</h3>
+    <div class="col-sm-4 show-2">
+      <img src="images/Margaret Haynie Poster.jpeg" class="img-fluid" style="width: 100%" alt="Responsive image">
+      <h2>Margaret Haynie</h2>
+      <h3>May 24th, 2024</h3>
       <h3>Red Door 6PM | Show 7PM</h3>
-      <h3>Tickets $5</h3>
+      <h3>Tickets $10</h3>
       <a href="https://www.eventbrite.com/e/an-intimate-evening-with-margaret-haynie-tickets-892172430757?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>
     </div>
     <div class="col-sm-4 show-2">
