--- a/Contact.html
+++ b/Contact.html
@@ -108,7 +108,7 @@
   <H1>Upcoming Shows at The Fiddle & Bow Music Hall</H1>
   <div class="row"> <!-- Opens Upcoming Shows Row -->
     <div class="col-sm-4 show-2">
-      <img src="images/Margaret Haynie Poster.jpeg" class="img-fluid" style="width: 100%" alt="Responsive image">
+      <img src="images/Madison Medlin.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
       <h2>Madison Medlin</h2>
       <h3>May 10th, 2024</h3>
       <h3>Red Door 6PM | Show 7PM</h3>
