--- a/Calendar.html
+++ b/Calendar.html
@@ -59,7 +59,7 @@
     </div>
 </nav> <!-- Closes nav bar -->
 
-<div class="container-fluid"> <!-- Opens container for Upcoming Events Piece-->
+<div class="container-fluid text-center"> <!-- Opens container for Upcoming Events Piece-->
 
     <div class="row content col-md-4"> <!-- Opens row for Upcoming Events Piece -->
       
@@ -230,6 +230,7 @@
               </div>         
     </div><!-- Closes "Row Content" -->
 </div> <!-- Closes "Content Text-Left"-->
+    </div>
     
 <footer class="footer bg-black text-center text-lg-start text-white">
             <!-- Grid container -->
