--- a/Calendar.html
+++ b/Calendar.html
@@ -231,7 +231,7 @@
     </div><!-- Closes "Row Content" -->
 </div> <!-- Closes "Content Text-Left"-->
     </div>
-    
+</div>
 <footer class="footer bg-black text-center text-lg-start text-white">
             <!-- Grid container -->
             <div class="container p-4">
